@@ -3,7 +3,7 @@
   "version": "0.3.1",
   "title": "Bulk Materials",
   "author": "Agentwhisky",
-  "description": "Allows configuration of item production multipliers for gears, sticks, engines, green, red, and blue circuits.",
+  "description": "Adds item production and speed multipliers for certain items. These include [gears, sticks, concrete, engines, artificial soil, quantum processors] and [red, green, and blue circuits].",
   "factorio_version": "2.0",
   "dependencies": ["base >= 2.0.0", "? space-age >= 2.0.0"]
 }
